tests/diagnostics/wrong_arg_count.stderr
error[E0103]: 引数の数が一致しません (期待 2, 実際 1)
 --> tests/diagnostics/wrong_arg_count.kal:3:1
  |
3 | add(1);
  | ^^^^^^
1 個のエラーで中断しました
