tests/diagnostics/wrong_arg_count.kal
# 'add' takes two arguments but is called with one.
fn add(a: i32, b: i32) -> i32 = a + b;
add(1);
